@@ -1,3 +1,5 @@
+* Adding intermediate level 9 with distance_of ability
+
 * Adding intermediate level 8 with look and detonate abilities
 
 * Raising an exception when performing an ability with a bad direction.
